add url normalizer to crawler